# my-server

./: .gitlab-ci.yml  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/src/: main.py
backend/tests/: test_status.py
frontend/: Dockerfile  Dockerfile.prod  package-lock.json  vite.config.ts
frontend/src/: App.tsx
nginx/: default.conf  dev.conf  prod.conf
