[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Kacper Multan <kmultan1234@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.129.0"
uvicorn = "^0.40.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
httpx = "^0.27.2"
anyio = "^4.8.0"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
